fix breadcrumbs wrapping badly on mobile

--- a/src/navigation/css/components/_honeycomb.navigation.components.breadcrumbs.scss
+++ b/src/navigation/css/components/_honeycomb.navigation.components.breadcrumbs.scss
@@ -11,16 +11,14 @@ nav.breadcrumbs {
     }
 
     a {
-        @include margin(1, 'right');
-        position: relative;
+        @include margin(0.5, 'right');
         font-weight: bold;
         color: inherit;
         border-bottom-color: transparent;  /* hide bottom border but keep it solid so it can transition smoothly */
 
         &:after {
+            @include padding(0.5, 'left');
             content: "\e607";
-            position: absolute;
-            right: px-rem(-26px);
             font-family: "Redgate";
             color: color('red', 'brand');
             font-weight: normal;
